--- a/Text Input Service/English.lproj/InfoPlist.strings
+++ b/Text Input Service/English.lproj/InfoPlist.strings
@@ -1,1 +1,1 @@
-﻿/* Localized versions of Info.plist keys */CFBundleName = "Text Input Service";CFBundleShortVersionString = "1.0";CFBundleGetInfoString = "Text Input Service version 1.0, Copyright 2014 miyako.";
+/* Localized versions of Info.plist keys */CFBundleName = "Text Input Service";CFBundleShortVersionString = "1.1";CFBundleGetInfoString = "Text Input Service version 1.1, Copyright 2019 miyako.";
